--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ ul li a span{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
+    min-height: 400px;
     color: #fff;
     flex-direction: column;
 
@@ -212,7 +212,7 @@ ul li a span{
     height: 2px;
     display: inline-block;
     top: 10px;
-    right: 137px;
+    right: 112px;
 }
 .discover-me > div{
     margin-top: 15px;
@@ -246,6 +246,11 @@ ul li a span{
 @media screen and (max-width:425px){
     .discover-me > div > button i{
         display: none;
+    }
+}
+@media screen and (max-width:398px){
+    .discover-me > div > button{
+        width: 45%;
     }
 }
 .services{
@@ -283,3 +288,56 @@ ul li a span{
     margin-top: 15px;
 }
 
+.portfolio{
+    display: flex;
+    align-items: center;
+    min-height: 600px;
+    flex-direction: column;
+    justify-items: space-between;
+    padding: 50px 0px;
+}
+.portfolio div h1{
+    color: #2b2d42;
+    text-transform: uppercase;
+}
+.portfolio .portfolio-item{
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 200px;
+    grid-gap: 20px;
+    min-height: 200px;
+}
+.portfolio-item > div{
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: #2b2d42;
+    color: #fff;
+}
+.portfolio-item > div > div{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+.portfolio-item > div > div > a{
+    color: #bf082c;
+    text-decoration: none;
+    font-weight: 500;
+}
+/* .resume{
+    display: flex;
+    justify-content: center;
+} */
+.contacts{
+    display: flex;
+    justify-content: center;
+    min-height: 200px;
+    align-items: center;
+}
+.contacts i{
+    padding-right: 20px;
+    color: #2b2b2b;
+}
